# FSIV

./: .gitignore  README.md
p1/: CMakeLists.txt  apuntes.txt  datos.txt  getStats  getStats.cpp  getStats.hpp  makefile  stats.hpp
p1/pruebas/: asdf.cc  esqueleto  esqueleto.cc
p2/: CMakeLists.txt  salida.avi  vseg  vseg.cpp  vseg.hpp
p4/: CMakeLists.txt  getContour  getContour.cpp  getContour.hpp  salida.txt
